# flaw-engine

./: .gitignore  PROJECT_MAP.md  benchmark.py  flaw_core.pyd  flaw_cutechess.bat  flaw_trainer.ipynb  keep_awake.ps1  leaderboard.json  main_tournament.py  test_hybrid.py  test_special.py  turbo_train.py  zip_project.ps1
ai/: adaptive_controller.py  cloud_setup.py  compare_weights.py  data_export.py  debug_mcts.py  elo_benchmark.py  external_sparring.py  hybrid_evaluator.py  learning_manager.py  mcts.py  mcts_worker.py  merge_results.py  neural_core.py  rate_engine.py  reinforcement_trainer.py  search_controller.py  selfplay_trainer.py  selfplay_worker.py  tournament_manager.py  tournament_verify.py  train_from_cloud.py  train_mcts.py  tuned_weights.json  verify_mcts.py  verify_uci.py  visualization.py  weight_server.py
core/: CMakeLists.txt  bare_test.cpp  board.cpp  board.h  dis.cpp  dis.h  evaluator.cpp  evaluator.h  flaw_core.cpp  main.cpp  main_test.cpp  movegen.cpp  movegen.h  transposition.h  types.h
core/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
core/build_313/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
core/build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
core/build_final/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
flaw_web/: app.py  flaw_core.pyd
interface/: cli.py  uci_adapter.py
logs/: game_2_20260110_110057.csv  game_7_20260110_130940.csv  intent_history.csv  results_worker_3378.json  (+4 more)
(+10 files in other folders)
